Debug for process and class